# web-forum-research-sentiment-analysis

./: .gitignore  README.md  pyproject.toml
configs/: concept_focus.json  source_targets.json  taxonomy.json
data/seeds/: candidate_comments_reddit_x.jsonl  candidate_posts_reddit_x.jsonl  initial_public_discussions.jsonl  sample_discourse_topic.json  sample_hn_algolia.json  sample_reddit_thread_export.json  sample_x_export.json
docs/: import-formats.md  pipeline-flow.md  schema.md
src/market_research_pipeline/: adapters.py  classify.py  cli.py  cluster.py  discovery.py  models.py  pipeline.py  reports.py  screen.py  storage.py
